--- a/Backend/src/main/resources/application-docker.properties
+++ b/Backend/src/main/resources/application-docker.properties
@@ -6,9 +6,9 @@ holos.jwtExpirationMs=57600000
 # Server Properties
 server.host=mariadb
 server.database=holos_db
-spring.datasource.url=jdbc:mariadb://mariadb:3306/holos_db
-spring.datasource.username=H0l0s_DB
-spring.datasource.password=H0l0s1$PP
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 server.port=8080
