--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -68,8 +68,8 @@
 		</dependency>
 		<!-- Database dependencies -->
 		<dependency>
-			<groupId>org.mariadb.jdbc</groupId>
-			<artifactId>mariadb-java-client</artifactId>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<!-- caching -->
