--- a/Backend/src/main/resources/application-docker.properties
+++ b/Backend/src/main/resources/application-docker.properties
@@ -4,14 +4,14 @@ holos.jwtSecret=h01os4EverSecretKey
 holos.jwtExpirationMs=57600000
 
 # Server Properties
-server.host=mariadb
+server.host=${SERVER_HOST}
 server.database=holos_db
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
-server.port=8080
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+server.port=${PORT:8080}
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
