--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -6,11 +6,11 @@ holos.jwtExpirationMs=57600000
 # Server Properties
 server.host=localhost
 server.database=holos_db
-spring.datasource.url=jdbc:mariadb://localhost:3306/holos_db
+spring.datasource.url=jdbc:mysql://localhost:3306/holos_db
 spring.datasource.username=H0l0s_DB
 spring.datasource.password=H0l0s1$PP
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 server.port=8080
 
 spring.jpa.hibernate.ddl-auto=create-drop
