--- a/Backend/src/main/resources/application-docker.properties
+++ b/Backend/src/main/resources/application-docker.properties
@@ -11,7 +11,7 @@ spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-server.port=${PORT:8080}
+server.port=${PORT}
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
