--- a/Backend/src/main/resources/application-docker.properties
+++ b/Backend/src/main/resources/application-docker.properties
@@ -5,7 +5,7 @@ holos.jwtExpirationMs=57600000
 
 # Server Properties
 server.host=${SERVER_HOST}
-server.database=holos_db
+server.database=holos-db
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
