--- a/Backend/src/main/resources/application-docker.properties
+++ b/Backend/src/main/resources/application-docker.properties
@@ -13,7 +13,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 server.port=${PORT}
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 logging.level.org.hibernate=ERROR
