fix: some changes on properties

--- a/Backend/src/main/resources/application-docker.properties
+++ b/Backend/src/main/resources/application-docker.properties
@@ -18,6 +18,7 @@ spring.jpa.show-sql=true
 
 logging.level.org.hibernate=ERROR
 logging.level.com.zaxxer.hikari=ERROR
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 
 spring.datasource.initialization-mode=always
 spring.jpa.defer-datasource-initialization=true
