--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -2,16 +2,17 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "module": "es2020",
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@/*": ["./*"]
     }
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
-    "expo-env.d.ts"
-, "src/contexts/AuthContext.js", "src/services/kanbanService.js"  ]
+    "expo-env.d.ts",
+    "src/contexts/AuthContext.js",
+    "src/services/kanbanService.js"
+  ]
 }
