--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,6 +51,7 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-gifted-chat": "^2.8.1",
     "react-native-masked-text": "^1.13.0",
     "react-native-network-info": "^5.2.1",
     "react-native-paper": "^5.13.1",
@@ -61,7 +62,8 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "expo-media-library": "~17.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
