--- a/frontend/app.json
+++ b/frontend/app.json
@@ -8,6 +8,10 @@
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+    "permissions": [
+      "MEDIA_LIBRARY",
+      "MEDIA_LIBRARY_WRITE_ONLY"
+    ],
     "ios": {
       "supportsTablet": true
     },
@@ -15,7 +19,11 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": [
+        "READ_EXTERNAL_STORAGE",
+        "WRITE_EXTERNAL_STORAGE"
+      ]
     },
     "web": {
       "bundler": "metro",
