--- a/Backend/src/main/resources/application-docker.properties
+++ b/Backend/src/main/resources/application-docker.properties
@@ -4,8 +4,7 @@ holos.jwtSecret=h01os4EverSecretKey
 holos.jwtExpirationMs=57600000
 
 # Server Properties
-server.host=${SERVER_HOST}
-server.database=holos-db
+server.database=${SERVER_DATABASE}
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
