--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "expo-haptics": "~14.0.1",
     "expo-image-picker": "^16.0.6",
     "expo-linking": "~7.0.5",
+    "expo-media-library": "^17.0.6",
     "expo-router": "~4.0.19",
     "expo-secure-store": "^14.0.1",
     "expo-splash-screen": "~0.29.22",
@@ -53,6 +54,7 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-gifted-chat": "^2.8.1",
     "react-native-masked-text": "^1.13.0",
     "react-native-network-info": "^5.2.1",
     "react-native-paper": "^5.13.1",
